--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,18 @@
+
+
+
+
 <div class="container">
 	<div class="row">
 		<div class="col-md-12 text-center" id="top-bar">
+
+
 			<img src="/assets/img/BURGS.jpg" alt="burger" />
 			<h1> Krabby Patties! </h1>
 		</div>
 		<div class="col-md-6 text-center" class="task">
 			<div class="row">
-			  {{#each burger_data}}
+			  {{#each burger}}
 			  	{{#unless this.devoured}}
 				<div class="col-md-9 text-center">
 					<pre>{{this.id}}. {{this.burger_name}}
@@ -14,8 +20,8 @@
 				  		<!-- {{this.Date}} -->
 				</div>
 				<div class="col-md-3 text-center">
-					<form class="devour-form button-size">
-						<input input type="hidden" class="burger_id" type="text" value={{this.id}}><br>
+					<form class="burg-form button-size">
+						<input input type="hidden" class="burgerid" type="text" value={{this.id}}><br>
 						<button type="submit" class="btn btn-default">Devour it!</button>
 					</form>
 				</div>
@@ -24,7 +30,7 @@
 			</div>
 		</div>
 		<div class="col-md-6 text-center" class="task">
-			  {{#each burger_data}}
+			  {{#each burger}}
 			  	{{#if this.devoured}}
 			  		<input class="form-control" type="text" placeholder="{{this.id}} . {{this.burger_name}}" readonly>
 				{{/if}}
